# zoom-ai

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  DESIGN.md  QUICKSTART.md  README.md  TODOS.md  docker-compose.yml  pyproject.toml  requirements.txt  simple_whisper_camera.py  test_chinese_camera.py  test_chinese_camera_with_save.py  test_microphone.py  test_wlk_debug.py  test_wlk_microphone.py  test_wlk_simple.py  whisper_camera_overlay.py
assets/: .gitkeep
docker/: Dockerfile
docs/: WLK_CAMERA_INTEGRATION.md  ZOOM_API_RESEARCH.md
scripts/: install-wlk.bat  install-wlk.sh  setup-macos.sh  setup.sh
zoom_ai/: __init__.py  audio_captions.py  bot.py  captions.py  cli.py  config.py  health.py  qwen_tts_test.py  test_audio.py  wlk_camera_overlay.py  wlk_captions.py  wlk_enhanced_overlay.py  wlk_tts_overlay.py
zoom_ai/avatar/: __init__.py
zoom_ai/bot/: __init__.py
zoom_ai/camera/: __init__.py
zoom_ai/tts/: __init__.py
